--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class = "row" >
+      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        This is my first coloumn
+      </div>
+      <div class = "col-xs-12 col-sm-6 col-md-4 col-lg-3">
+        This is my next coloumn
+      </div>
+    </div>
+      
+      
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
