--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <table class="table table-hover">
     <thead>
         <th></th><th></th><th></th>
@@ -16,3 +17,4 @@
         </tr>
     </tbody>
 </table>
+</html>
