--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+    <body>
 <table class="table table-hover">
     <thead>
         <th></th><th></th><th></th>
@@ -17,4 +18,5 @@
         </tr>
     </tbody>
 </table>
+    </body>
 </html>
