--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 			</div>
 			<h2>A Few of My Famous Quotes</h2>
 			<p>
-				<img src="http://img189.imageshack.us/img189/9177/paperru.jpg
-" width="139" height="150" style="margin: 0 10px 10px 0;float:left;" />
+				<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwititucs9XPAhUE4CYKHelbBpUQjRwIBw&url=https%3A%2F%2Fwww.youtube.com%2Fuser%2FGoogle&psig=AFQjCNHcU8iURmallo2iWkjJ73gsZZVv9w&ust=1476366306516586" />
 				<em>"That's what she said."</em> - Me<br/>
 				<em>"Would I rather be feared or loved? Easy, both. I want people to be afraid of how much they love me."</em> - Me<br/>
 				<em>"Wikipedia is the best thing ever. Anyone in the world can write anything they want about any subject, so you know you are getting the best possible information."</em> - Me<br/>
