--- a/index.html
+++ b/index.html
@@ -1,66 +1,46 @@
-
 <html>
 <head>
-    <title>My Personal Webpage</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+
+<!-- your webpage info goes here -->
+
+    <title>My First Website</title>
+	
+	<meta name="author" content="your name" />
+	<meta name="description" content="" />
+
+<!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
+	<link rel="stylesheet" href="style.css" type="text/css" />
+	
 </head>
 <body>
-<div id="wrapper">
-    
-	<div id="header">
-		<div id="nav"><a href="index.html">Home</a> | <a href="#">About Me</a> | <a href="#">Contact Me</a> | <a href="#">My Photos</a> | <a href="#">My Videos</a></div>
-		<div id="bg"></div>
-	</div>
-	
-	<div id="main-content">
-		<div id="left-column">
-			<div id="logo">
-			Welcome to Michael Scott's Webpage
-			</div>
-			<div class="box">
-        		<h1>What You'll Find Here</h1>
-        		<p>This is my space. Here are some of my interests: </p>
-				<ul style="margin-top:10px;">
-					<li>Saying "That's what she said"</li>
-					<li>Writing song parodies</li>
-					<li>Playing ice hockey</li>
-					<li>Wearing jeans</li>
-					<li>Chrysler cars</li>
-				</ul>
-			</div>
-			<h2>A Few of My Famous Quotes</h2>
+
+<!-- webpage content goes here in the body -->
+
+	<div id="page">
+		<div id="logo">
+			<h1><a href="/" id="logoLink">My First Website</a></h1>
+		</div>
+		<div id="nav">
+			<ul>
+				<li><a href="#/home.html">Home</a></li>
+				<li><a href="#/about.html">About</a></li>
+				<li><a href="#/contact.html">Contact</a></li>
+			</ul>	
+		</div>
+		<div id="content">
+			<h2>Home</h2>
 			<p>
-				<img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwititucs9XPAhUE4CYKHelbBpUQjRwIBw&url=https%3A%2F%2Fwww.youtube.com%2Fuser%2FGoogle&psig=AFQjCNHcU8iURmallo2iWkjJ73gsZZVv9w&ust=1476366306516586" />
-				<em>"That's what she said."</em> - Me<br/>
-				<em>"Would I rather be feared or loved? Easy, both. I want people to be afraid of how much they love me."</em> - Me<br/>
-				<em>"Wikipedia is the best thing ever. Anyone in the world can write anything they want about any subject, so you know you are getting the best possible information."</em> - Me<br/>
-				<em>"I am Michael, and I am part English, Irish, German, and Scottish, sort of a virtual United Nations."</em> - Me<br/>
+				This is my first webpage! I was able to code all the HTML and CSS in order to make it. Watch out world of web design here I come!
+			</p>
+			<p> 
+				I can use my skills here to create websites for my business, my friends and family, my C.V, blog or articles. As well as any games or more experiment stuff (which is what the web is really all about). 
 			</p>
 		</div>
-		<div id="right-column">
-			<div id="main-image"><img src="http://img38.imageshack.us/img38/7065/michaelscotto.jpg
-" width="160" height="188" /></div>
-			<div class="sidebar">
-				<h3>Blurb About Me</h3>
-				<p>My name is Michael Scott. And I love Dunder Mifflin and Dwight Schrute.</p>
-				<h3>Find Me Elsewhere</h3>
-				<div class="box">
-					<ul>
-						<li><a href="http://facebook.com" target="_blank">Facebook</a></li>
-						<li><a href="http://twitter.com" target="_blank">Twitter</a></li>
-						<li><a href="http://linkedin.com" target="_blank">LinkedIn</a></li>
-						<li><a href="http://tumblr.com" target="_blank">Tumblr</a></li>
-						<li><a href="http://pinterest.com" target="_blank">Pinterest </a></li>
-					</ul>
-				</div>
-			</div>
+		<div id="footer">
+			<p>
+				Webpage made by <a href="/" target="_blank">[your name]</a>
+			</p>
 		</div>
 	</div>
-	<div id="footer">
-		Copyright &copy; 2012 Michael Scott. All rights reserved.<br/>
-		Layout adapted from <a href="http://www.web-designers-directory.org/" target="_blank">Web Designers' Directory</a>.
-	</div>
-</div>
-
 </body>
 </html>
