--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 		<div id="footer">
 			<p>
-				Webpage made by <a href="/" target="_blank">[your name]</a>
+				Webpage made by <a href="/" target="_blank">Ishaan</a>
 			</p>
 		</div>
 	</div>
