--- a/index.html
+++ b/index.html
@@ -3,44 +3,44 @@
 
 <!-- your webpage info goes here -->
 
-    <title>My First Website</title>
+    <title>My Personal Website</title>
 	
-	<meta name="author" content="your name" />
-	<meta name="description" content="" />
 
-<!-- you should always add your stylesheet (css) in the head tag so that it starts loading before the page html is being displayed -->	
-	<link rel="stylesheet" href="style.css" type="text/css" />
 	
 </head>
 <body>
 
-<!-- webpage content goes here in the body -->
+	<p> <h3> Ishaan Roychowdhury</h3>
 
-	<div id="page">
-		<div id="logo">
-			<h1><a href="/" id="logoLink">My First Website</a></h1>
-		</div>
-		<div id="nav">
-			<ul>
-				<li><a href="#/home.html">Home</a></li>
-				<li><a href="#/about.html">About</a></li>
-				<li><a href="#/contact.html">Contact</a></li>
-			</ul>	
-		</div>
-		<div id="content">
-			<h2>Home</h2>
-			<p>
-				This is my first webpage! I was able to code all the HTML and CSS in order to make it. Watch out world of web design here I come!
-			</p>
-			<p> 
-				I can use my skills here to create websites for my business, my friends and family, my C.V, blog or articles. As well as any games or more experiment stuff (which is what the web is really all about). 
-			</p>
-		</div>
-		<div id="footer">
-			<p>
-				Webpage made by <a href="/" target="_blank">Ishaan</a>
-			</p>
-		</div>
-	</div>
+210B Roosevelt Hall
+Governors Complex
+University at Buffalo
+14261
++18455361052
+ishaanro@buffalo.edu
+	<h3>SKILLS</h3>
+Web-designing.
+Extensive experience with coding in Java, C++ and HTML
+Familiar with CSS and PHP. 
+Fluent with Microsoft Word, PowerPoint and Excel.
+Experience with presentations and debates.
+Have a great grasp on high level Mathematics and Physics.
+	<h3>EXPERIENCE</h3>
+Community Code - Mumbai(India)
+            Web designer in the technology team. 
+            Position included website designing and handling.
+Snap Schedule Student - New York (United States of America)
+            Chief technology officer.
+            Position included website designing, handling and giving
+            Presentations on Microsoft Word.
+      
+	<h3> EDUCATION</h3>
+Bombay Scottish School (10th grade) - Mumbai (India) 
+      Graduated in May 2014 and stood 7th in school out of 130 students with a 
+      93%.
+ Pace Junior Science College (12th grade) - Mumbai (india)
+      Graduated in April 2016 with a percentile of 86 in the state. There were 
+       1.2 million students who took the test in the state. 
+<p>
 </body>
 </html>
