--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 	<p> <h3> Ishaan Roychowdhury</h3>
 
-210B Roosevelt Hall
-Governors Complex
+	<li>210B Roosevelt Hall</li>
+	<li>Governors Complex</li>
 University at Buffalo
 14261
 +18455361052
