--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 	<li>210B Roosevelt Hall</li>
 	<li>Governors Complex</li>
-University at Buffalo
-14261
-+18455361052
-ishaanro@buffalo.edu
+<li>University at Buffalo</li>
+<li>14261</li>
+	<li>+18455361052</li>
+	<li>ishaanro@buffalo.edu</li>
 	<h3>SKILLS</h3>
-Web-designing.
+<li>Web-designing.</li>
 Extensive experience with coding in Java, C++ and HTML
 Familiar with CSS and PHP. 
 Fluent with Microsoft Word, PowerPoint and Excel.
