--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-<!-- your webpage info goes here -->
+
+
 
     <title>My Personal Website</title>
 	
