--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src=https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjm85eOwK3QAhXJ6IMKHfQfCbYQjRwIBw&url=http%3A%2F%2Fwww.planwallpaper.com%2Fwallpaper-hd&psig=AFQjCNEbo5JmHMqRlPxzQMgQGyTTrw1tzA&ust=1479393416634269&cad=rjt style="width:100%">
+          <img src="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjm85eOwK3QAhXJ6IMKHfQfCbYQjRwIBw&url=http%3A%2F%2Fwww.planwallpaper.com%2Fwallpaper-hd&psig=AFQjCNEbo5JmHMqRlPxzQMgQGyTTrw1tzA&ust=1479393416634269&cad=rjt"  >
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Ishaan Roychowdhury</h2>
+            <h2>Ishaan Roychowdhury </h2>
           </div>
         </div>
         <div class="w3-container">
