--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -276,7 +278,7 @@ img.emoji {
 	
 		
 		<div class="site-info">
-	<a href="https://wordpress.com/?ref=footer_blog">Blog at WordPress.com.</a>
+	<a href="https://wordpress.com/?ref=footer_blog">Credits: WordPress</a>
 	
 	</div><!-- .site-info -->
 	</footer>
