--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
 <a href="#" class="fa fa-youtube"></a>	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp
 <a href="#" class="fa fa-instagram"></a> <br><br><br><br><br><br>
 <center> <h4>Professional: </h4></center>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp  <a href="https://www.linkedin.com/in/ishaanrc/" class="fa fa-linkedin"></a>&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp
-<img src="https://img.icons8.com/cute-clipart/64/000000/github.png "alt = "Image" height="82" width="82"/>
+<a href="https://www.w3schools.com"> <img src="https://img.icons8.com/cute-clipart/64/000000/github.png "alt = "Image" height="82" width="82"/>
 
 				</section>
 
