--- a/index.html
+++ b/index.html
@@ -602,66 +602,86 @@
 									<div class='icon' >
 
 									</div>
-
 									<p>
-										Ei constituam theophrastus per, sea dolorum disputationi in, vel menandri suavitate similique in. Vide assum conceptam eum et. Has postulant vul putate eu. Pro justo aliquando prodesset at.
+										<b><h4>Virtual Walking Stick</b></h4>
 									</p>
 
+
 									<div class='author' >
-										<h4>Jake Doe</h4>
-										<span>CEO at Company</span>
+														<h5> Python, XCode, OpenCV API’s, git, Tensorflow</h5>
+
+										<span>•	Leveraged an ML neural networks model for visual identification using a 3202 Digi-Key Camera. <br>
+•	Provided vision-to-text features with accuracy over 0.95 on the training data.
+
+</span>
 									</div>
 
 								</div>
 
+									<div class='testimonial' >
+
+									<div class='icon' >
+
+									</div>
+									<p>
+										<b><h4>Interpreter</b></h4>
+									</p>
+
+
+									<div class='author' >
+														<h5> OCaml </h5>
+
+										<span>•	Constructed an interpreter that executes a program line by line and parses it using logical operations. <br>
+•	Made use of varied scoping and data structures to iterate over the bytecode language.
+
+
+</span>
+									</div>
+
+								</div>
+
+
+										<div class='testimonial' >
+
+									<div class='icon' >
+
+									</div>
+									<p>
+										<b><h4>HTML Validator & Fractal Generator </b></h4>
+									</p>
+
+
+									<div class='author' >
+														<h5> C++, Java </h5>
+
+										<span>•	Validator converted HTML files into a DOM tree and verified the tags as per W3C standards.<br>
+•	Used multi-threading to generate fractals and improve their performance by 15%.
+
+
+
+</span>
+									</div>
+
+								</div>
 								<div class='testimonial' >
 
 									<div class='icon' >
 
 									</div>
-
 									<p>
-										Ei constituam theophrastus per, sea dolorum disputationi in, vel menandri suavitate similique in. Vide assum conceptam eum et. Has postulant vul putate eu. Pro justo aliquando prodesset at.
+										<b><h4>SnapSchedule</b></h4>
 									</p>
 
-									<div class='author' >
-										<h4>Jake Doe</h4>
-										<span>CEO at Company</span>
-									</div>
-
-								</div>
-
-
-								<div class='testimonial' >
-
-									<div class='icon' >
-
-									</div>
-
-									<p>
-										Ei constituam theophrastus per, sea dolorum disputationi in, vel menandri suavitate similique in. Vide assum conceptam eum et. Has postulant vul putate eu. Pro justo aliquando prodesset at.
-									</p>
 
 									<div class='author' >
-										<h4>Jake Doe</h4>
-										<span>CEO at Company</span>
-									</div>
+														<h5> Python, SQL, HTML/PHP/CSS/ Ajax, JavaScript</h5>
 
-								</div>
+										<span>•	Created a scheduling website for students where students can make their own schedule. <br>
+•	Implemented by the University in the following year because of its ease-of-use UI
 
-								<div class='testimonial' >
 
-									<div class='icon' >
 
-									</div>
-
-									<p>
-										Ei constituam theophrastus per, sea dolorum disputationi in, vel menandri suavitate similique in. Vide assum conceptam eum et. Has postulant vul putate eu. Pro justo aliquando prodesset at.
-									</p>
-
-									<div class='author' >
-										<h4>Jake Doe</h4>
-										<span>CEO at Company</span>
+</span>
 									</div>
 
 								</div>
