--- a/index.html
+++ b/index.html
@@ -90,13 +90,6 @@
 						</li>
 
 
-						<li>
-							<a href='#contact' class='section-toggle' data-section='contact' >
-								Contact
-							</a>
-						</li>
-
-
 					</ul>
 				</div>
 			</div>
@@ -123,7 +116,7 @@
 									<h1>I'm Ishaan Roychowdhury</h1>
 
 									<p>
-										"Hello World!" - I'm an Aspiring Software Engineer
+										"Hello World!" - I'm currently working as a Software Developer
 									</p>
 
 									<div class='intro-btns' >
@@ -158,7 +151,7 @@
 
 							<div class='section-header' >
 								<h2>
-									I'm an <strong class='color' >Aspiring Software Engineer</strong>
+									I'm currently working as a <strong class='color' >Software Developer</strong>
 								</h2>
 							</div>
 
@@ -177,7 +170,7 @@
 
 										<li>
 											<strong>Age:</strong>
-											<span>22 Years</span>
+											<span>23 Years</span>
 										</li>
 
 										<li>
@@ -199,10 +192,7 @@
 								<div class='col-md-8' >
 
 									<div class='about-text' >
-										<p>
-											I am a result oriented senior currently at the State University of New York at Buffalo. I am pursuing my bachelor’s degree in computer science and business management. What I am now, is quite divergent from what I was 8 years back. My past experiences have shaped me into being more mature and having a rounded personality over the course of the last 8 years. So not surprisingly my ambitions, too, have changed and I can see myself becoming someone who's more comfortable with my past and who I am at the moment. More acceptance has crept in me too. Not only that but also, I would like to do my two-bit for the society by volunteering for just causes whereas in the past, such topics would have barely merited an acknowledgement on my part. I’m looking forward to learn a lot more and want to work on some kind of software development. I have previously worked at Twitter, IBM and Accenture which made me realize how software can change the world. With a career in software technology, I would be in an environment where I would interact with able peers from all around the world and witness technology as it expands its horizons. So, I am hoping for a well-rounded experience wherein I not only pursue my academic dream in one of the best companies, but also am also able to contribute to the community and be more than just another student statistic. I am looking forward to building a strong academic and extracurricular focus.
 
-								</p>
 
 									</div>
 
@@ -228,6 +218,28 @@
 
 							<div class='row' >
 
+
+
+								<div class='col-md-4' >
+									<div class='service' >
+
+										<div class='icon' >
+<img src="https://img.icons8.com/color/50/000000/salesforce.png"/>
+										</div>
+
+										<div class='content' >
+
+											<h4>Salesforce</h4>
+
+											<p>
+												Software Developer<br><br><br><br>
+											</p>
+
+										</div>
+
+									</div>
+								</div>
+
 								<div class='col-md-4' >
 									<div class='service' >
 
@@ -237,7 +249,7 @@
 
 										<div class='content' >
 
-											<h4>IBM</h4>
+											<h4>IBM/enParadigm</h4>
 
 											<p>
 												Software Engineering Intern<br><br><br><br>
@@ -252,7 +264,7 @@
 									<div class='service' >
 
 										<div class='icon' >
-											<i class='icon-basic-keyboard' ></i>
+										<img src="https://img.icons8.com/ios-filled/50/000000/a.png"/>
 										</div>
 
 										<div class='content' >
@@ -328,7 +340,7 @@
 										<h4>C / C++</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:100%;' ></div>
+											<div class='percent' style='width:70%;' ></div>
 										</div>
 
 									</div>
@@ -339,7 +351,7 @@
 										<h4>Java</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:100%;' ></div>
+											<div class='percent' style='width:85%;' ></div>
 										</div>
 
 									</div>
@@ -353,7 +365,7 @@
 										<h4>Python</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:85%;' ></div>
+											<div class='percent' style='width:70%;' ></div>
 										</div>
 
 									</div>
@@ -364,7 +376,7 @@
 										<h4>React/React Native</h4>
 
 										<div class='bar' >
-											<div class='percent' style='width:90%;' ></div>
+											<div class='percent' style='width:85%;' ></div>
 										</div>
 
 									</div>
@@ -471,7 +483,29 @@
 							</div>
 
 							<ul class='timeline' >
+								<li>
 
+									<div class='timeline-content' >
+
+										<h4>Salesforce</h4>
+
+										<em>
+											<span>Software Engineering Internship</span>
+											<span>| August 2020 - Present</span>
+										</em>
+
+										<p>
+											•	Worked as a Salesforce Developer which involved creating datasets and dashboards from external databases using custom code as well as internal data flows.
+<br>
+•	Developed a custom CRM application for 40,000+ customers using Salesforce Service cloud that helped them in quality, cost and time management which lessened the investment to one-tenth.
+
+										</p>
+
+									</div>
+
+								</li>
+
+								<li>
 								<li>
 
 									<div class='timeline-content' >
@@ -610,7 +644,7 @@
 									<div class='author' >
 														<h5> Python, XCode, OpenCV API’s, git, Tensorflow</h5>
 
-										<span>•	Leveraged an ML neural networks model for visual identification using a 3202 Digi-Key Camera. <br>
+										<span>•	Leveraged ML neural networks model for visual identification using a 3202 Digi-Key Camera. <br>
 •	Provided vision-to-text features with accuracy over 0.95 on the training data.
 
 </span>
@@ -755,133 +789,6 @@
 				</section>
 
 
-
-				<!--=====================================================
-					Contact Section
-				=====================================================-->
-				<section id='contact' class='section contact-section border-d' >
-
-					<div class='section-block contact-block' >
-
-						<div class='container-fluid' >
-
-							<div class='section-header' >
-								<h2>Contact <strong class='color' >Me</strong></h2>
-							</div>
-
-
-							<div class='row' >
-
-								<div class='col-md-8' >
-
-									<div class='contact-form' >
-
-										<form id='contact-form' data-toggle='validator' method='post' action='mail.php' >
-
-											<div id='contact-form-result' ></div>
-
-											<div class='row' >
-
-												<div class='col-md-6' >
-													<div class='form-group' >
-
-														<input type='text' class='form-control' placeholder='Name' name='name' required>
-														<div class='help-block with-errors' ></div>
-
-													</div>
-												</div>
-
-												<div class='col-md-6' >
-													<div class='form-group' >
-
-														<input type='email' class='form-control' placeholder='Email' name='email' required>
-														<div class='help-block with-errors' ></div>
-
-													</div>
-												</div>
-
-											</div>
-
-											<div class='form-group' >
-
-												<input type='text' class='form-control' placeholder='Subject' name='subject' required>
-												<div class='help-block with-errors' ></div>
-
-											</div>
-
-											<div class='form-group' >
-
-												<textarea class='form-control' placeholder='Message' name='message' rows='5' required></textarea>
-												<div class='help-block with-errors' ></div>
-
-											</div>
-
-											<div class='form-group text-center' >
-												<button type='submit' class='btn-custom btn-color' >
-													Send Message
-												</button>
-											</div>
-
-										</form>
-
-									</div>
-
-
-								</div>
-
-								<div class='col-md-4' >
-
-									<div class='contact-info-icons' >
-
-										<div class='contact-info' >
-
-											<i class='ion-ios-location-outline' ></i>
-
-											<p>
-												185 Springville Ave<br>
-												Buffalo, NY 14226
-											</p>
-
-										</div>
-
-
-										<div class='contact-info' >
-
-											<i class='ion-ios-telephone-outline' ></i>
-
-											<p>
-												+1 (845)-536-1052<br>
-
-											</p>
-
-										</div>
-
-
-
-
-
-
-
-									</div>
-
-
-
-								</div>
-
-
-							</div>
-
-
-
-						</div>
-
-					</div>
-
-				</section>
-
-			</div>
-
-		</div>
 
 
 		<!--=====================================================
