--- a/index.html
+++ b/index.html
@@ -726,7 +726,105 @@
 						</div>
 
 					</div>
+					<div class='section-block testimonials-block' >
 
+						<div class='container-fluid' >
+
+							<div class='section-header' >
+
+								<h2>My <strong class='color' >CERTIFICATIONS, AWARDS AND ACCOMPLISHMENTS</strong></h2>
+
+							</div>
+
+
+							<div class='testimonials-slider' >
+
+
+								<div class='testimonial' >
+
+									<div class='icon' >
+
+									</div>
+									<p>
+										<b><h4>&lt;Salesforce Platform Developer Level 1 and 2 Certification&gt;</b></h4>
+
+																			<div class='author' >
+																								<h5>December 2020</h5>
+
+																</div>
+																	</div>
+																	<div class='testimonial' >
+
+																		<div class='icon' >
+
+																		</div>
+																		<p>
+																			<b><h4>&lt;Salesforce Administrator Certification&gt;</b></h4>
+
+																												<div class='author' >
+																																	<h5>October 2020</h5>
+
+																									</div>
+																										</div>
+																										<div class='testimonial' >
+
+																											<div class='icon' >
+
+																											</div>
+																											<p>
+																												<b><h4>&lt;Salesforce Einstein and Discovery Certification&gt;</b></h4>
+
+																																					<div class='author' >
+																																										<h5>September 2020</h5>
+
+																																		</div>
+																																			</div>
+
+
+
+
+<div class='testimonial' >
+
+	<div class='icon' >
+
+	</div>
+	<p>
+		<b><h4>&lt;Placed #2 at the Google Tech Challenge.&gt;</b></h4>
+
+											<div class='author' >
+																<h5>September 2019</h5>
+
+								</div>
+									</div>
+
+
+
+									<div class='testimonial' >
+
+										<div class='icon' >
+
+										</div>
+										<p>
+											<b><h4>&lt;Held Executive Board positions for the UB Poker Club and the UB Jam Club&gt;</b></h4>
+
+																				<div class='author' >
+																									<h5>August 2016 - August 2019</h5>
+
+																	</div>
+																		</div>
+																		<div class='testimonial' >
+
+																			<div class='icon' >
+
+																			</div>
+																			<p>
+																				<b><h4>&lt;UB International Admissions & Engineering Fellowship Scholarship&gt;</b></h4>
+
+																													<div class='author' >
+																																		<h5>August 2016</h5>
+
+																										</div>
+																											</div>
 				</section>
 
 
