--- a/index.html
+++ b/index.html
@@ -875,13 +875,26 @@
   color: white;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
+.flex-container {
+  display: flex;
+}
+.flex-container > div {
+  background-color: #f1f1f1;
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+}
 
 	</style>
 	<center><h4>Social: </h4></center>
-&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp<a href="https://www.facebook.com/ishaan.rc/" class="fa fa-facebook"></a> 	&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp<a href="/snapcode.png" class="fa fa-snapchat-ghost"></a>	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp
-<a href="https://www.youtube.com/channel/UCMBXtDd3BoNIQN4UaRlSfHg?view_as=subscriber" class="fa fa-youtube"></a>	&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp
-<a href="https://www.instagram.com/ishaanrc/" class="fa fa-instagram"></a> <br><br><br><br><br><br>
-<center> <h4>Professional: </h4></center>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp  <a href="https://www.linkedin.com/in/ishaanrc/" class="fa fa-linkedin"></a>&nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp 	&nbsp &nbsp &nbsp &nbsp &nbsp
+	<div class="flex-container">
+<div><a href="https://www.facebook.com/ishaan.rc/" class="fa fa-facebook"><a> </div>
+<div><a href="/snapcode.png" class="fa fa-snapchat-ghost"><a></div>
+<div><a href="https://www.youtube.com/channel/UCMBXtDd3BoNIQN4UaRlSfHg?view_as=subscriber" class="fa fa-youtube"></a></div>
+<div><a href="https://www.instagram.com/ishaanrc/" class="fa fa-instagram"></a> </div>	<br><br><br><br><br><br>
+</div>
+<center> <h4>Professional: </h4></center>
+<a href="https://www.linkedin.com/in/ishaanrc/" class="fa fa-linkedin"></a>
 <a href="https://github.com/ishaanrc"> <img src="https://img.icons8.com/cute-clipart/64/000000/github.png "alt = "Image" height="82" width="82"/>
 
 				</section>
