--- a/index.html
+++ b/index.html
@@ -877,6 +877,9 @@
 }
 .flex-container {
   display: flex;
+	  flex-wrap: wrap;
+	 align-content: space-between;
+
 }
 .flex-container > div {
   background-color: #f1f1f1;
@@ -894,9 +897,10 @@
 <div><a href="https://www.instagram.com/ishaanrc/" class="fa fa-instagram"></a> </div>	<br><br><br><br><br><br>
 </div>
 <center> <h4>Professional: </h4></center>
-<a href="https://www.linkedin.com/in/ishaanrc/" class="fa fa-linkedin"></a>
-<a href="https://github.com/ishaanrc"> <img src="https://img.icons8.com/cute-clipart/64/000000/github.png "alt = "Image" height="82" width="82"/>
-
+<div class="flex-container">
+<div><a href="https://www.linkedin.com/in/ishaanrc/" class="fa fa-linkedin"></a></div>
+<div><a href="https://github.com/ishaanrc"> <img src="https://img.icons8.com/cute-clipart/64/000000/github.png "alt = "Image" height="82" width="82"/></div>
+</div>
 				</section>
 
 
