--- a/index.html
+++ b/index.html
@@ -877,15 +877,16 @@
 }
 .flex-container {
   display: flex;
-	  flex-wrap: wrap;
+
 	 align-content: space-between;
+	 justify-content: center;
 
 }
 .flex-container > div {
   background-color: #f1f1f1;
   margin: 10px;
   padding: 20px;
-  font-size: 30px;
+  font-size: 10px;
 }
 
 	</style>
